Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.8.0
Description
When a method is called with a parameter that has a warning in the clang code model:
"implicit conversion changes signedness"
then the "F1" help access does not find any help: "No documentation available"
e.g.
QVector<SensorEvent> sensorEvents;
unsigned int numEvents = 2;
sensorEvents.resize(numEvents);
Looks like this in QtCreator if you have the cursor on resize and press "F1":
If the cursor is in sensorEvents then the help of QVector is openend by "F1".
Btw.: There is only one method "resize" in QVector....
What I'm wondering: if you can detect that there is a implicit conversion from foo to bar, wouldn't it be ok that help shows the documentation of "method(bar)"?
Attachments
Issue Links
- relates to
-
QTCREATORBUG-15959 Help is not showing for known methods
-
- Closed
-
-
QTCREATORBUG-11332 F1 for help fails unless correct syntax.
-
- Closed
-